--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^4.1.3",
     "workbox-broadcast-update": "^4.1.3",
