--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^10.1.0",
     "@testing-library/user-event": "^11.1.10",
     "firebase": "^8.2.1",
+    "lodash.memoize": "^4.1.2",
     "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -15,6 +16,7 @@
     "react-scripts": "^3.0.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^4.1.3",
